--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body {
 
 .circle {
     background-color: white;
-    color: #999;
+    color: rgb(104, 99, 99);
     border-radius: 50%;
     height: 30px;
     width: 30px;
@@ -68,6 +68,8 @@ body {
     justify-content: center;
     border: 3px solid var(--line-border-empty);
     transition: .4s ease;
+    font-size: 18px;
+    font-weight: 500;
 }
 
 .circle.active {
@@ -83,7 +85,7 @@ body {
     font-family: inherit;
     padding: 8px 30px;
     margin: 5px;
-    font-size: 14px;
+    font-size: 15px;
 }
 
 .btn:active {
